<package>
  <name>std_msgs</name>
  <version>0.5.2</version>
  <description>Standard ROS Message</description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/rospack</url>
  <url type="repository">http://kforge.ros.org/rosrelease/rospack</url>
  <author email="mquigley@cs.stanford.edu">Morgan Quigley</author>
  <author email="kwc@willowgarage.com">Ken Conley</author>
  <author email="leibs@willowgarage.com">Jeremy Leibs</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>

  <run_depend>langs</run_depend>
</package>
